--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# NSE Adaptive Regime Trading System - Git Ignore Rules
+
+# =============================================================================
+# Python
+# =============================================================================
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[codz]
+*.py[cod]
 *$py.class
 
 # C extensions
@@ -27,14 +32,8 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
@@ -46,7 +45,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 cover/
@@ -55,13 +54,13 @@ cover/
 *.mo
 *.pot
 
-# Django stuff:
+# Django stuff (if used for dashboards):
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# Flask stuff (if used for APIs):
 instance/
 .webassets-cache
 
@@ -70,6 +69,8 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/_static/
+docs/_templates/
 
 # PyBuilder
 .pybuilder/
@@ -77,54 +78,26 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+*.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
 
 # IPython
 profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+Pipfile.lock
 
 # poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+poetry.lock
 
 # pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+.pdm.toml
 
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582
 __pypackages__/
 
 # Celery stuff
@@ -136,7 +109,6 @@ celerybeat.pid
 
 # Environments
 .env
-.envrc
 .venv
 env/
 venv/
@@ -168,40 +140,233 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# =============================================================================
+# Trading-Specific Files
+# =============================================================================
+# Environment variables (NEVER commit credentials)
+.env
+.env.local
+.env.production
+.env.*.local
+
+# Keep the example file
+!.env.example
+
+# Trading data
+data/
+data/raw/
+data/processed/
+data/features/
+data/qlib_data/
+!data/.gitkeep
+
+# Model files and checkpoints
+models/
+models/checkpoints/
+models/rl_agents/
+*.pkl
+*.pickle
+*.h5
+*.pt
+*.pth
+*.onnx
+*.pb
+!models/.gitkeep
+
+# Trading logs (may contain sensitive information)
+logs/
+logs/trades.log
+logs/trading.log
+logs/execution.log
+logs/tensorboard/
+*.log
+!logs/.gitkeep
+
+# Backtest results
+backtest_results/
+backtest_results/*.json
+backtest_results/*.csv
+!backtest_results/.gitkeep
+
+# Performance reports
+reports/
+reports/*.html
+reports/*.pdf
+!reports/.gitkeep
+
+# =============================================================================
+# Database Files
+# =============================================================================
+# DuckDB database files
+*.duckdb
+*.duckdb.wal
+
+# SQLite databases
+*.db
+*.sqlite
+*.sqlite3
+
+# MongoDB dumps
+dump/
+
+# =============================================================================
+# API Keys and Credentials
+# =============================================================================
+# Zerodha credentials
+kite_access_token.txt
+zerodha_credentials.json
+
+# OpenBB credentials
+openbb_credentials.json
+
+# Any JSON files with credentials
+*_credentials.json
+*_secrets.json
+*_api_keys.json
+
+# =============================================================================
+# IDE and Editor Files
+# =============================================================================
+# VSCode
+.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+*.iml
+*.iws
+*.ipr
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+# Vim
+*.swp
+*.swo
+*~
 
-# Ruff stuff:
+# Emacs
+*~
+\#*\#
+.\#*
+
+# =============================================================================
+# OS Files
+# =============================================================================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# =============================================================================
+# Profiling and Performance
+# =============================================================================
+*.prof
+*.lprof
+.profiling/
+
+# Memory profiler
+*.mprofile
+
+# =============================================================================
+# Temporary Files
+# =============================================================================
+tmp/
+temp/
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# =============================================================================
+# Package Manager Directories
+# =============================================================================
+node_modules/
+bower_components/
+
+# =============================================================================
+# CI/CD
+# =============================================================================
+.github/workflows/*.log
+
+# =============================================================================
+# Cache Directories
+# =============================================================================
+.cache/
 .ruff_cache/
 
-# PyPI configuration file
-.pypirc
+# =============================================================================
+# Monitoring and Metrics
+# =============================================================================
+prometheus_data/
+grafana_data/
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# =============================================================================
+# Custom Ignores
+# =============================================================================
+# Add any project-specific ignores below
 
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+# Large data files (use Git LFS if needed)
+*.parquet
+*.feather
+*.hdf5
+*.h5
+
+# Compressed archives
+*.zip
+*.tar.gz
+*.tar.bz2
+*.tar.xz
+*.rar
+*.7z
+
+# Paper trading results (comment out if you want to track these)
+paper_trading_results/
+
+# Live trading results (ALWAYS ignored for security)
+live_trading_results/
+
+# Sensitive notebooks (containing real API keys or trading strategies)
+notebooks/private/
+notebooks/*_private.ipynb
+
+# =============================================================================
+# Keep Empty Directories
+# =============================================================================
+# Use .gitkeep files to preserve directory structure
+!**/.gitkeep
