--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 # =============================================================================
 # TIER 1: Market Data & Core Infrastructure
 # =============================================================================
-openbb==4.2.4                    # Professional market data platform
+openbb>=4.5.0                    # Professional market data platform
 duckdb==0.10.3                   # High-performance OLAP database
 sqlalchemy==2.0.30               # Database ORM
 
@@ -57,6 +57,7 @@ ta-lib==0.4.28                   # Technical analysis library (requires C librar
 pandas-ta==0.3.14b               # Pandas Technical Analysis
 quantlib==1.34                   # Quantitative finance library
 empyrical==0.5.5                 # Financial performance metrics
+pandera==0.19.3                  # Data validation for pandas DataFrames
 
 # =============================================================================
 # TIER 7: Time Series & Statistical Analysis
@@ -149,6 +150,7 @@ python-dateutil==2.9.0.post0     # Date/time utilities
 pytz==2024.1                     # Timezone definitions
 holidays==0.52                   # Holiday calendar (includes India)
 exchange-calendars==4.5.4        # Trading calendar library
+typing-extensions==4.11.0        # Typing extensions for older Python
 
 # =============================================================================
 # TIER 18: API & Web Framework (for dashboards)
