Fix data quality and price column issues in ML pipeline
Resolved missing price column by auto-detecting 'factor_001' as close price in both training and backtesting scripts. Improved data quality handling by filtering inf/nan/extreme values and clipping features in model trainer. Updated package discovery in pyproject.toml, added a helper script for PYTHONPATH, and relaxed date validation for multi-symbol datasets.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,8 +113,7 @@ Issues = "https://github.com/yourusername/nse-adaptive-regime-trading/issues"
 nse-trade = "src.cli:main"
 
 [tool.setuptools]
-package-dir = {"" = "."}
-packages = ["src"]
+packages = {find = {where = ["."], include = ["src*"]}}
 
 [tool.setuptools.package-data]
 src = ["py.typed"]
