--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ Issues = "https://github.com/yourusername/nse-adaptive-regime-trading/issues"
 nse-trade = "src.cli:main"
 
 [tool.setuptools]
-packages = {find = {where = ["."], include = ["src*"]}}
+packages = {find = {include = ["src", "src.*"]}}
 
 [tool.setuptools.package-data]
 src = ["py.typed"]
