--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ classifiers = [
 
 dependencies = [
     "openbb>=4.2.4",
-    "qlib>=0.9.3",
+    "qlib",
     "tensortrade>=1.0.3",
     "kiteconnect>=4.2.0",
     "pandas>=2.2.2",
@@ -57,6 +57,13 @@ dependencies = [
     "pyyaml>=6.0.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
+    "pandera>=0.19.0",
+    "tqdm>=4.66.0",
+    "python-dateutil>=2.9.0",
+    "pytz>=2024.1",
+    "holidays>=0.52",
+    "cvxpy>=1.4.0",
+    "xgboost>=2.0.0",
 ]
 
 [project.optional-dependencies]
