Restructure and archive documentation files
Moved historical and process documentation to docs/archive, added new archive and production readiness summaries, and updated .gitignore to reference deprecated documentation. This improves maintainability and clarity of documentation structure.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,7 @@ notebooks/*_private.ipynb
 # =============================================================================
 # Use .gitkeep files to preserve directory structure
 !**/.gitkeep
+
+# Deprecated/archived documentation (kept for reference)
+deprecated/*.sh
+!deprecated/README.md
